add class BAService and Test